fixes: logging, field types, post request, swagger
