# cmd/api/docs/swagger.json
@@ -54,7 +54,7 @@
                 "summary": "Get NFT Traits Rarity",
                 "parameters": [
                     {
-                        "description": "Rarity request",
+                        "description": "Rarity request (collectionId, properties)",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -246,7 +246,7 @@
                     "type": "string"
                 },
                 "lazyValue": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "originOrders": {
                     "type": "array",
@@ -267,10 +267,10 @@
                     "type": "string"
                 },
                 "tokenId": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "value": {
-                    "type": "integer"
+                    "type": "string"
                 },
                 "version": {
                     "type": "integer"
@@ -294,11 +294,28 @@
                 }
             }
         },
+        "RaribleAPI_internal_model.Property": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
         "RaribleAPI_internal_model.RarityRequest": {
             "type": "object",
             "properties": {
-                "collection": {
+                "collectionId": {
                     "type": "string"
+                },
+                "properties": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/RaribleAPI_internal_model.Property"
+                    }
                 }
             }
         },
